--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    
+    <div class="container">
+        <h1>FizzBuzzDOM</h1>
+        <div class="row">
+
+        </div>
+    </div>
 
     <script src="js/main.js"></script>
 </body>
